<resources>
    <string name="app_name">Pendamping Hidupmu</string>
    <string name="introPendamping">Pendamping Hidupmu Adalah</string>
    <string name="judul">Masukkan Jumlah Pemasukan dan Pengeluaran</string>
    <string name="pemasukan">Pemasukan (Rp.)</string>
    <string name="pengeluaran">Pengeluaran (Rp.)</string>
    <string name="hint_orang">Masukkan jumlah orang berkunjung</string>
    <string name="mode_gelap">Dark Mode</string>
    <string name="totalButton">Hitung Total</string>
    <string name="boros">BOROS</string>
    <string name="hemat">HEMAT</string>
    <string name="pelit">PELIT</string>
    <string name="judul_boros">Ciri orang yang boros</string>
    <string name="saran_boros">Cara agar tidak boros</string>
    <string name="judul_hemat">Ciri orang yang  Hemat</string>
    <string name="saran_kurus">Saran agar hemat</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="saran_aja">Pertahankan keuanganmu, karena hidup boros tidak akan pernah menjadi kaya</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Pendamping Hidupmu adalah aplikasi Android untuk menghitung pemasukan dan pengeluaran
     seseorang sehingga orang tersebut dapat berhemat.\n\nAplikasi ini dibuat untuk mengikuti Asessment 2 Mobpro 1 </string>
</resources>